# gentags

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
data/: README.md
data/sample/: venues_sample.csv
docs/: EVALUATION.md  GCP_VM_SETUP.md  METHODS.md  MODEL_NOTES.md  PAPER_STRUCTURE.md  PHASE1_EXTRACTION_ISSUES.md  PHASE2_PLAN.md  PHASE2_STATUS.md  PHASE2_SUCCESS_CHECKLIST.md  PHASE3_ANALYSIS_REPORT.md  PHASE3_PLAN.md  PROJECT_INVENTORY.md  PROMPTS.md  STABILITY_ANALYSIS_REPORT.md  STUDY1_LOCK.md  WEEK1_COMPLETE.md  WEEK2_PHASE1_COMPLETE.md
issues/: 001_phase2_analysis_performance.md
notebooks/: 01_phase1_pilot.ipynb  02_phase1_analysis.ipynb  03_reconstruction_eval.ipynb  04_stability_exploration.ipynb  phase2_explore.ipynb
results/: README.md
scripts/: download_phase1_results.py  export_for_viewer.py  export_tables.py  generate_manifest.py  phase2_analysis.py  phase2_plots.py  phase3_analysis.py  phase3_model_in_loop.py  phase3_plots.py  run_phase1.py  run_phase2.sh  run_phase3.sh  run_phase3_model_in_loop.sh  sanity_check.py  setup_gcp_vm.sh  smoke_test_minimal.py  test_cost_summary.py
src/gentags/: __init__.py  config.py  data.py  experiment.py  extractor.py  io.py  metrics.py  normalize.py  parsing.py  pipeline.py  schema.py
tests/: __init__.py  test_filter.py  test_hashes.py  test_normalize.py  test_parsing.py
