[tool.poetry]
name = "gentags"
version = "1.2.0"
description = "Machine-Generated Folksonomy for Sparse Review Recommendation"
readme = "README.md"
authors = ["Gentags Research Team"]
license = "MIT"
keywords = ["tag-extraction", "nlp", "research", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=2.0.0"
python-dotenv = ">=1.0.0"
openai = ">=1.0.0"
anthropic = ">=0.30.0"
google-genai = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
